# NISwGSP_Ubuntu

./: .travis.yml  README.md
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/: CMakeLists.txt  CMakeLists_share.txt  Configure.h  main.cpp  niswgsp.cpp  niswgsp.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Feature/: MultiImages.cpp  MultiImages.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Mesh/: MeshOptimization.cpp  MeshOptimization.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Stitching/: NISwGSP_Stitching.cpp  NISwGSP_Stitching.h  Parameter.cpp
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Util/: Transform.cpp
